y.output
Terminais sem uso na gramática

   TK_VAR
   TK_NOT
   "and"
   "or"
   "<="
   "=>"
   "=="
   "!="
   "not"


Estado 95 conflitos: 1 de deslocamento/redução


Gramática

    0 $accept: S $end

    1 S: CMDS

    2 CMDS: CMDS CMD
    3     | CMD

    4 CMD: DECLVAR ';'
    5    | ENTRADA
    6    | SAIDA
    7    | ATR
    8    | FOR
    9    | IF

   10 CMDX: ENTRADA
   11     | SAIDA
   12     | ATR
   13     | FOR
   14     | IF

   15 BLOCO: TK_BEGIN CMDS TK_END

   16 DECLVAR: TK_INT VARS
   17        | TK_CHAR VARS
   18        | TK_STRING VARS
   19        | TK_BOOLEAN VARS
   20        | TK_REAL VARS

   21 VARS: VARS ',' VAR
   22     | VAR

   23 VAR: TK_ID '[' CINT ']'
   24    | TK_ID

   25 ENTRADA: TK_CONSOLE ENTRADAS

   26 ENTRADAS: TK_SHIFTR TK_ID ';'
   27         | TK_SHIFTR TK_ID ENTRADAS
   28         | TK_SHIFTR TK_ID '[' E ']' ';'
   29         | TK_SHIFTR TK_ID '[' E ']' ENTRADAS

   30 SAIDA: TK_CONSOLE SAIDAS

   31 SAIDAS: TK_SHIFTL E ';'
   32       | TK_SHIFTL E TK_ENDL ';'
   33       | TK_SHIFTL E SAIDAS
   34       | TK_SHIFTL TK_ENDL ';'
   35       | %empty

   36 FOR: TK_FOR TK_ID TK_IN '[' E TK_2PT E ']' BLOCO ';'
   37    | TK_FOR TK_ID TK_IN '[' E TK_2PT E ']' CMDX

   38 IF: TK_IF R TK_THEN BLOCO TK_ELSE BLOCO ';'
   39   | TK_IF R TK_THEN BLOCO TK_ELSE CMD
   40   | TK_IF R TK_THEN CMD TK_ELSE CMD
   41   | TK_IF R TK_THEN BLOCO ';'
   42   | TK_IF R TK_THEN CMD

   43 ATR: TK_ID '=' E ';'
   44    | TK_ID '[' E ']' '=' E ';'

   45 E: E '+' E
   46  | E '-' E
   47  | E '*' E
   48  | E '/' E
   49  | E '%' E
   50  | V

   51 R: E
   52  | C
   53  | L

   54 C: E '<' E
   55  | E '>' E
   56  | E TK_MAIG E
   57  | E TK_MEIG E
   58  | E TK_IG E
   59  | E TK_DIF E

   60 L: C TK_AND C
   61  | C TK_OR C

   62 V: TK_ID '[' E ']'
   63  | TK_ID
   64  | CINT
   65  | CDOUBLE
   66  | CSTRING
   67  | CCHAR
   68  | '(' E ')'


Terminais, com as regras onde eles aparecem

$end (0) 0
'%' (37) 49
'(' (40) 68
')' (41) 68
'*' (42) 47
'+' (43) 45
',' (44) 21
'-' (45) 46
'/' (47) 48
';' (59) 4 26 28 31 32 34 36 38 41 43 44
'<' (60) 54
'=' (61) 43 44
'>' (62) 55
'[' (91) 23 28 29 36 37 44 62
']' (93) 23 28 29 36 37 44 62
error (256)
CINT (258) 23 64
CDOUBLE (259) 65
TK_ID (260) 23 24 26 27 28 29 36 37 43 44 62 63
TK_VAR (261)
TK_CONSOLE (262) 25 30
TK_SHIFTR (263) 26 27 28 29
TK_SHIFTL (264) 31 32 33 34
TK_ENDL (265) 32 34
TK_FOR (266) 36 37
TK_IN (267) 36 37
TK_2PT (268) 36 37
TK_IF (269) 38 39 40 41 42
TK_THEN (270) 38 39 40 41 42
TK_ELSE (271) 38 39 40
TK_BEGIN (272) 15
TK_END (273) 15
TK_MAIG (274) 56
TK_MEIG (275) 57
TK_IG (276) 58
TK_DIF (277) 59
TK_AND (278) 60
TK_OR (279) 61
TK_NOT (280)
TK_INT (281) 16
TK_CHAR (282) 17
TK_STRING (283) 18
TK_BOOLEAN (284) 19
TK_REAL (285) 20
CCHAR (286) 67
CSTRING (287) 66
"and" (288)
"or" (289)
"<=" (290)
"=>" (291)
"==" (292)
"!=" (293)
"not" (294)


Não terminais com as regras onde eles aparecem

$accept (54)
    à esquerda: 0
S (55)
    à esquerda: 1, à direita: 0
CMDS (56)
    à esquerda: 2 3, à direita: 1 2 15
CMD (57)
    à esquerda: 4 5 6 7 8 9, à direita: 2 3 39 40 42
CMDX (58)
    à esquerda: 10 11 12 13 14, à direita: 37
BLOCO (59)
    à esquerda: 15, à direita: 36 38 39 41
DECLVAR (60)
    à esquerda: 16 17 18 19 20, à direita: 4
VARS (61)
    à esquerda: 21 22, à direita: 16 17 18 19 20 21
VAR (62)
    à esquerda: 23 24, à direita: 21 22
ENTRADA (63)
    à esquerda: 25, à direita: 5 10
ENTRADAS (64)
    à esquerda: 26 27 28 29, à direita: 25 27 29
SAIDA (65)
    à esquerda: 30, à direita: 6 11
SAIDAS (66)
    à esquerda: 31 32 33 34 35, à direita: 30 33
FOR (67)
    à esquerda: 36 37, à direita: 8 13
IF (68)
    à esquerda: 38 39 40 41 42, à direita: 9 14
ATR (69)
    à esquerda: 43 44, à direita: 7 12
E (70)
    à esquerda: 45 46 47 48 49 50, à direita: 28 29 31 32 33 36 37
    43 44 45 46 47 48 49 51 54 55 56 57 58 59 62 68
R (71)
    à esquerda: 51 52 53, à direita: 38 39 40 41 42
C (72)
    à esquerda: 54 55 56 57 58 59, à direita: 52 60 61
L (73)
    à esquerda: 60 61, à direita: 53
V (74)
    à esquerda: 62 63 64 65 66 67 68, à direita: 50


Estado 0

    0 $accept: . S $end

    TK_ID       deslocar, e ir ao estado 1
    TK_CONSOLE  deslocar, e ir ao estado 2
    TK_FOR      deslocar, e ir ao estado 3
    TK_IF       deslocar, e ir ao estado 4
    TK_INT      deslocar, e ir ao estado 5
    TK_CHAR     deslocar, e ir ao estado 6
    TK_STRING   deslocar, e ir ao estado 7
    TK_BOOLEAN  deslocar, e ir ao estado 8
    TK_REAL     deslocar, e ir ao estado 9

    S        ir ao estado 10
    CMDS     ir ao estado 11
    CMD      ir ao estado 12
    DECLVAR  ir ao estado 13
    ENTRADA  ir ao estado 14
    SAIDA    ir ao estado 15
    FOR      ir ao estado 16
    IF       ir ao estado 17
    ATR      ir ao estado 18


Estado 1

   43 ATR: TK_ID . '=' E ';'
   44    | TK_ID . '[' E ']' '=' E ';'

    '['  deslocar, e ir ao estado 19
    '='  deslocar, e ir ao estado 20


Estado 2

   25 ENTRADA: TK_CONSOLE . ENTRADAS
   30 SAIDA: TK_CONSOLE . SAIDAS

    TK_SHIFTR  deslocar, e ir ao estado 21
    TK_SHIFTL  deslocar, e ir ao estado 22

    $padrão  reduzir usando a regra 35 (SAIDAS)

    ENTRADAS  ir ao estado 23
    SAIDAS    ir ao estado 24


Estado 3

   36 FOR: TK_FOR . TK_ID TK_IN '[' E TK_2PT E ']' BLOCO ';'
   37    | TK_FOR . TK_ID TK_IN '[' E TK_2PT E ']' CMDX

    TK_ID  deslocar, e ir ao estado 25


Estado 4

   38 IF: TK_IF . R TK_THEN BLOCO TK_ELSE BLOCO ';'
   39   | TK_IF . R TK_THEN BLOCO TK_ELSE CMD
   40   | TK_IF . R TK_THEN CMD TK_ELSE CMD
   41   | TK_IF . R TK_THEN BLOCO ';'
   42   | TK_IF . R TK_THEN CMD

    CINT     deslocar, e ir ao estado 26
    CDOUBLE  deslocar, e ir ao estado 27
    TK_ID    deslocar, e ir ao estado 28
    CCHAR    deslocar, e ir ao estado 29
    CSTRING  deslocar, e ir ao estado 30
    '('      deslocar, e ir ao estado 31

    E  ir ao estado 32
    R  ir ao estado 33
    C  ir ao estado 34
    L  ir ao estado 35
    V  ir ao estado 36


Estado 5

   16 DECLVAR: TK_INT . VARS

    TK_ID  deslocar, e ir ao estado 37

    VARS  ir ao estado 38
    VAR   ir ao estado 39


Estado 6

   17 DECLVAR: TK_CHAR . VARS

    TK_ID  deslocar, e ir ao estado 37

    VARS  ir ao estado 40
    VAR   ir ao estado 39


Estado 7

   18 DECLVAR: TK_STRING . VARS

    TK_ID  deslocar, e ir ao estado 37

    VARS  ir ao estado 41
    VAR   ir ao estado 39


Estado 8

   19 DECLVAR: TK_BOOLEAN . VARS

    TK_ID  deslocar, e ir ao estado 37

    VARS  ir ao estado 42
    VAR   ir ao estado 39


Estado 9

   20 DECLVAR: TK_REAL . VARS

    TK_ID  deslocar, e ir ao estado 37

    VARS  ir ao estado 43
    VAR   ir ao estado 39


Estado 10

    0 $accept: S . $end

    $end  deslocar, e ir ao estado 44


Estado 11

    1 S: CMDS .
    2 CMDS: CMDS . CMD

    TK_ID       deslocar, e ir ao estado 1
    TK_CONSOLE  deslocar, e ir ao estado 2
    TK_FOR      deslocar, e ir ao estado 3
    TK_IF       deslocar, e ir ao estado 4
    TK_INT      deslocar, e ir ao estado 5
    TK_CHAR     deslocar, e ir ao estado 6
    TK_STRING   deslocar, e ir ao estado 7
    TK_BOOLEAN  deslocar, e ir ao estado 8
    TK_REAL     deslocar, e ir ao estado 9

    $padrão  reduzir usando a regra 1 (S)

    CMD      ir ao estado 45
    DECLVAR  ir ao estado 13
    ENTRADA  ir ao estado 14
    SAIDA    ir ao estado 15
    FOR      ir ao estado 16
    IF       ir ao estado 17
    ATR      ir ao estado 18


Estado 12

    3 CMDS: CMD .

    $padrão  reduzir usando a regra 3 (CMDS)


Estado 13

    4 CMD: DECLVAR . ';'

    ';'  deslocar, e ir ao estado 46


Estado 14

    5 CMD: ENTRADA .

    $padrão  reduzir usando a regra 5 (CMD)


Estado 15

    6 CMD: SAIDA .

    $padrão  reduzir usando a regra 6 (CMD)


Estado 16

    8 CMD: FOR .

    $padrão  reduzir usando a regra 8 (CMD)


Estado 17

    9 CMD: IF .

    $padrão  reduzir usando a regra 9 (CMD)


Estado 18

    7 CMD: ATR .

    $padrão  reduzir usando a regra 7 (CMD)


Estado 19

   44 ATR: TK_ID '[' . E ']' '=' E ';'

    CINT     deslocar, e ir ao estado 26
    CDOUBLE  deslocar, e ir ao estado 27
    TK_ID    deslocar, e ir ao estado 28
    CCHAR    deslocar, e ir ao estado 29
    CSTRING  deslocar, e ir ao estado 30
    '('      deslocar, e ir ao estado 31

    E  ir ao estado 47
    V  ir ao estado 36


Estado 20

   43 ATR: TK_ID '=' . E ';'

    CINT     deslocar, e ir ao estado 26
    CDOUBLE  deslocar, e ir ao estado 27
    TK_ID    deslocar, e ir ao estado 28
    CCHAR    deslocar, e ir ao estado 29
    CSTRING  deslocar, e ir ao estado 30
    '('      deslocar, e ir ao estado 31

    E  ir ao estado 48
    V  ir ao estado 36


Estado 21

   26 ENTRADAS: TK_SHIFTR . TK_ID ';'
   27         | TK_SHIFTR . TK_ID ENTRADAS
   28         | TK_SHIFTR . TK_ID '[' E ']' ';'
   29         | TK_SHIFTR . TK_ID '[' E ']' ENTRADAS

    TK_ID  deslocar, e ir ao estado 49


Estado 22

   31 SAIDAS: TK_SHIFTL . E ';'
   32       | TK_SHIFTL . E TK_ENDL ';'
   33       | TK_SHIFTL . E SAIDAS
   34       | TK_SHIFTL . TK_ENDL ';'

    CINT     deslocar, e ir ao estado 26
    CDOUBLE  deslocar, e ir ao estado 27
    TK_ID    deslocar, e ir ao estado 28
    TK_ENDL  deslocar, e ir ao estado 50
    CCHAR    deslocar, e ir ao estado 29
    CSTRING  deslocar, e ir ao estado 30
    '('      deslocar, e ir ao estado 31

    E  ir ao estado 51
    V  ir ao estado 36


Estado 23

   25 ENTRADA: TK_CONSOLE ENTRADAS .

    $padrão  reduzir usando a regra 25 (ENTRADA)


Estado 24

   30 SAIDA: TK_CONSOLE SAIDAS .

    $padrão  reduzir usando a regra 30 (SAIDA)


Estado 25

   36 FOR: TK_FOR TK_ID . TK_IN '[' E TK_2PT E ']' BLOCO ';'
   37    | TK_FOR TK_ID . TK_IN '[' E TK_2PT E ']' CMDX

    TK_IN  deslocar, e ir ao estado 52


Estado 26

   64 V: CINT .

    $padrão  reduzir usando a regra 64 (V)


Estado 27

   65 V: CDOUBLE .

    $padrão  reduzir usando a regra 65 (V)


Estado 28

   62 V: TK_ID . '[' E ']'
   63  | TK_ID .

    '['  deslocar, e ir ao estado 53

    $padrão  reduzir usando a regra 63 (V)


Estado 29

   67 V: CCHAR .

    $padrão  reduzir usando a regra 67 (V)


Estado 30

   66 V: CSTRING .

    $padrão  reduzir usando a regra 66 (V)


Estado 31

   68 V: '(' . E ')'

    CINT     deslocar, e ir ao estado 26
    CDOUBLE  deslocar, e ir ao estado 27
    TK_ID    deslocar, e ir ao estado 28
    CCHAR    deslocar, e ir ao estado 29
    CSTRING  deslocar, e ir ao estado 30
    '('      deslocar, e ir ao estado 31

    E  ir ao estado 54
    V  ir ao estado 36


Estado 32

   45 E: E . '+' E
   46  | E . '-' E
   47  | E . '*' E
   48  | E . '/' E
   49  | E . '%' E
   51 R: E .
   54 C: E . '<' E
   55  | E . '>' E
   56  | E . TK_MAIG E
   57  | E . TK_MEIG E
   58  | E . TK_IG E
   59  | E . TK_DIF E

    TK_MAIG  deslocar, e ir ao estado 55
    TK_MEIG  deslocar, e ir ao estado 56
    TK_IG    deslocar, e ir ao estado 57
    TK_DIF   deslocar, e ir ao estado 58
    '<'      deslocar, e ir ao estado 59
    '>'      deslocar, e ir ao estado 60
    '+'      deslocar, e ir ao estado 61
    '-'      deslocar, e ir ao estado 62
    '*'      deslocar, e ir ao estado 63
    '/'      deslocar, e ir ao estado 64
    '%'      deslocar, e ir ao estado 65

    $padrão  reduzir usando a regra 51 (R)


Estado 33

   38 IF: TK_IF R . TK_THEN BLOCO TK_ELSE BLOCO ';'
   39   | TK_IF R . TK_THEN BLOCO TK_ELSE CMD
   40   | TK_IF R . TK_THEN CMD TK_ELSE CMD
   41   | TK_IF R . TK_THEN BLOCO ';'
   42   | TK_IF R . TK_THEN CMD

    TK_THEN  deslocar, e ir ao estado 66


Estado 34

   52 R: C .
   60 L: C . TK_AND C
   61  | C . TK_OR C

    TK_AND  deslocar, e ir ao estado 67
    TK_OR   deslocar, e ir ao estado 68

    $padrão  reduzir usando a regra 52 (R)


Estado 35

   53 R: L .

    $padrão  reduzir usando a regra 53 (R)


Estado 36

   50 E: V .

    $padrão  reduzir usando a regra 50 (E)


Estado 37

   23 VAR: TK_ID . '[' CINT ']'
   24    | TK_ID .

    '['  deslocar, e ir ao estado 69

    $padrão  reduzir usando a regra 24 (VAR)


Estado 38

   16 DECLVAR: TK_INT VARS .
   21 VARS: VARS . ',' VAR

    ','  deslocar, e ir ao estado 70

    $padrão  reduzir usando a regra 16 (DECLVAR)


Estado 39

   22 VARS: VAR .

    $padrão  reduzir usando a regra 22 (VARS)


Estado 40

   17 DECLVAR: TK_CHAR VARS .
   21 VARS: VARS . ',' VAR

    ','  deslocar, e ir ao estado 70

    $padrão  reduzir usando a regra 17 (DECLVAR)


Estado 41

   18 DECLVAR: TK_STRING VARS .
   21 VARS: VARS . ',' VAR

    ','  deslocar, e ir ao estado 70

    $padrão  reduzir usando a regra 18 (DECLVAR)


Estado 42

   19 DECLVAR: TK_BOOLEAN VARS .
   21 VARS: VARS . ',' VAR

    ','  deslocar, e ir ao estado 70

    $padrão  reduzir usando a regra 19 (DECLVAR)


Estado 43

   20 DECLVAR: TK_REAL VARS .
   21 VARS: VARS . ',' VAR

    ','  deslocar, e ir ao estado 70

    $padrão  reduzir usando a regra 20 (DECLVAR)


Estado 44

    0 $accept: S $end .

    $padrão  aceitar


Estado 45

    2 CMDS: CMDS CMD .

    $padrão  reduzir usando a regra 2 (CMDS)


Estado 46

    4 CMD: DECLVAR ';' .

    $padrão  reduzir usando a regra 4 (CMD)


Estado 47

   44 ATR: TK_ID '[' E . ']' '=' E ';'
   45 E: E . '+' E
   46  | E . '-' E
   47  | E . '*' E
   48  | E . '/' E
   49  | E . '%' E

    '+'  deslocar, e ir ao estado 61
    '-'  deslocar, e ir ao estado 62
    '*'  deslocar, e ir ao estado 63
    '/'  deslocar, e ir ao estado 64
    '%'  deslocar, e ir ao estado 65
    ']'  deslocar, e ir ao estado 71


Estado 48

   43 ATR: TK_ID '=' E . ';'
   45 E: E . '+' E
   46  | E . '-' E
   47  | E . '*' E
   48  | E . '/' E
   49  | E . '%' E

    '+'  deslocar, e ir ao estado 61
    '-'  deslocar, e ir ao estado 62
    '*'  deslocar, e ir ao estado 63
    '/'  deslocar, e ir ao estado 64
    '%'  deslocar, e ir ao estado 65
    ';'  deslocar, e ir ao estado 72


Estado 49

   26 ENTRADAS: TK_SHIFTR TK_ID . ';'
   27         | TK_SHIFTR TK_ID . ENTRADAS
   28         | TK_SHIFTR TK_ID . '[' E ']' ';'
   29         | TK_SHIFTR TK_ID . '[' E ']' ENTRADAS

    TK_SHIFTR  deslocar, e ir ao estado 21
    ';'        deslocar, e ir ao estado 73
    '['        deslocar, e ir ao estado 74

    ENTRADAS  ir ao estado 75


Estado 50

   34 SAIDAS: TK_SHIFTL TK_ENDL . ';'

    ';'  deslocar, e ir ao estado 76


Estado 51

   31 SAIDAS: TK_SHIFTL E . ';'
   32       | TK_SHIFTL E . TK_ENDL ';'
   33       | TK_SHIFTL E . SAIDAS
   45 E: E . '+' E
   46  | E . '-' E
   47  | E . '*' E
   48  | E . '/' E
   49  | E . '%' E

    TK_SHIFTL  deslocar, e ir ao estado 22
    TK_ENDL    deslocar, e ir ao estado 77
    '+'        deslocar, e ir ao estado 61
    '-'        deslocar, e ir ao estado 62
    '*'        deslocar, e ir ao estado 63
    '/'        deslocar, e ir ao estado 64
    '%'        deslocar, e ir ao estado 65
    ';'        deslocar, e ir ao estado 78

    $padrão  reduzir usando a regra 35 (SAIDAS)

    SAIDAS  ir ao estado 79


Estado 52

   36 FOR: TK_FOR TK_ID TK_IN . '[' E TK_2PT E ']' BLOCO ';'
   37    | TK_FOR TK_ID TK_IN . '[' E TK_2PT E ']' CMDX

    '['  deslocar, e ir ao estado 80


Estado 53

   62 V: TK_ID '[' . E ']'

    CINT     deslocar, e ir ao estado 26
    CDOUBLE  deslocar, e ir ao estado 27
    TK_ID    deslocar, e ir ao estado 28
    CCHAR    deslocar, e ir ao estado 29
    CSTRING  deslocar, e ir ao estado 30
    '('      deslocar, e ir ao estado 31

    E  ir ao estado 81
    V  ir ao estado 36


Estado 54

   45 E: E . '+' E
   46  | E . '-' E
   47  | E . '*' E
   48  | E . '/' E
   49  | E . '%' E
   68 V: '(' E . ')'

    '+'  deslocar, e ir ao estado 61
    '-'  deslocar, e ir ao estado 62
    '*'  deslocar, e ir ao estado 63
    '/'  deslocar, e ir ao estado 64
    '%'  deslocar, e ir ao estado 65
    ')'  deslocar, e ir ao estado 82


Estado 55

   56 C: E TK_MAIG . E

    CINT     deslocar, e ir ao estado 26
    CDOUBLE  deslocar, e ir ao estado 27
    TK_ID    deslocar, e ir ao estado 28
    CCHAR    deslocar, e ir ao estado 29
    CSTRING  deslocar, e ir ao estado 30
    '('      deslocar, e ir ao estado 31

    E  ir ao estado 83
    V  ir ao estado 36


Estado 56

   57 C: E TK_MEIG . E

    CINT     deslocar, e ir ao estado 26
    CDOUBLE  deslocar, e ir ao estado 27
    TK_ID    deslocar, e ir ao estado 28
    CCHAR    deslocar, e ir ao estado 29
    CSTRING  deslocar, e ir ao estado 30
    '('      deslocar, e ir ao estado 31

    E  ir ao estado 84
    V  ir ao estado 36


Estado 57

   58 C: E TK_IG . E

    CINT     deslocar, e ir ao estado 26
    CDOUBLE  deslocar, e ir ao estado 27
    TK_ID    deslocar, e ir ao estado 28
    CCHAR    deslocar, e ir ao estado 29
    CSTRING  deslocar, e ir ao estado 30
    '('      deslocar, e ir ao estado 31

    E  ir ao estado 85
    V  ir ao estado 36


Estado 58

   59 C: E TK_DIF . E

    CINT     deslocar, e ir ao estado 26
    CDOUBLE  deslocar, e ir ao estado 27
    TK_ID    deslocar, e ir ao estado 28
    CCHAR    deslocar, e ir ao estado 29
    CSTRING  deslocar, e ir ao estado 30
    '('      deslocar, e ir ao estado 31

    E  ir ao estado 86
    V  ir ao estado 36


Estado 59

   54 C: E '<' . E

    CINT     deslocar, e ir ao estado 26
    CDOUBLE  deslocar, e ir ao estado 27
    TK_ID    deslocar, e ir ao estado 28
    CCHAR    deslocar, e ir ao estado 29
    CSTRING  deslocar, e ir ao estado 30
    '('      deslocar, e ir ao estado 31

    E  ir ao estado 87
    V  ir ao estado 36


Estado 60

   55 C: E '>' . E

    CINT     deslocar, e ir ao estado 26
    CDOUBLE  deslocar, e ir ao estado 27
    TK_ID    deslocar, e ir ao estado 28
    CCHAR    deslocar, e ir ao estado 29
    CSTRING  deslocar, e ir ao estado 30
    '('      deslocar, e ir ao estado 31

    E  ir ao estado 88
    V  ir ao estado 36


Estado 61

   45 E: E '+' . E

    CINT     deslocar, e ir ao estado 26
    CDOUBLE  deslocar, e ir ao estado 27
    TK_ID    deslocar, e ir ao estado 28
    CCHAR    deslocar, e ir ao estado 29
    CSTRING  deslocar, e ir ao estado 30
    '('      deslocar, e ir ao estado 31

    E  ir ao estado 89
    V  ir ao estado 36


Estado 62

   46 E: E '-' . E

    CINT     deslocar, e ir ao estado 26
    CDOUBLE  deslocar, e ir ao estado 27
    TK_ID    deslocar, e ir ao estado 28
    CCHAR    deslocar, e ir ao estado 29
    CSTRING  deslocar, e ir ao estado 30
    '('      deslocar, e ir ao estado 31

    E  ir ao estado 90
    V  ir ao estado 36


Estado 63

   47 E: E '*' . E

    CINT     deslocar, e ir ao estado 26
    CDOUBLE  deslocar, e ir ao estado 27
    TK_ID    deslocar, e ir ao estado 28
    CCHAR    deslocar, e ir ao estado 29
    CSTRING  deslocar, e ir ao estado 30
    '('      deslocar, e ir ao estado 31

    E  ir ao estado 91
    V  ir ao estado 36


Estado 64

   48 E: E '/' . E

    CINT     deslocar, e ir ao estado 26
    CDOUBLE  deslocar, e ir ao estado 27
    TK_ID    deslocar, e ir ao estado 28
    CCHAR    deslocar, e ir ao estado 29
    CSTRING  deslocar, e ir ao estado 30
    '('      deslocar, e ir ao estado 31

    E  ir ao estado 92
    V  ir ao estado 36


Estado 65

   49 E: E '%' . E

    CINT     deslocar, e ir ao estado 26
    CDOUBLE  deslocar, e ir ao estado 27
    TK_ID    deslocar, e ir ao estado 28
    CCHAR    deslocar, e ir ao estado 29
    CSTRING  deslocar, e ir ao estado 30
    '('      deslocar, e ir ao estado 31

    E  ir ao estado 93
    V  ir ao estado 36


Estado 66

   38 IF: TK_IF R TK_THEN . BLOCO TK_ELSE BLOCO ';'
   39   | TK_IF R TK_THEN . BLOCO TK_ELSE CMD
   40   | TK_IF R TK_THEN . CMD TK_ELSE CMD
   41   | TK_IF R TK_THEN . BLOCO ';'
   42   | TK_IF R TK_THEN . CMD

    TK_ID       deslocar, e ir ao estado 1
    TK_CONSOLE  deslocar, e ir ao estado 2
    TK_FOR      deslocar, e ir ao estado 3
    TK_IF       deslocar, e ir ao estado 4
    TK_BEGIN    deslocar, e ir ao estado 94
    TK_INT      deslocar, e ir ao estado 5
    TK_CHAR     deslocar, e ir ao estado 6
    TK_STRING   deslocar, e ir ao estado 7
    TK_BOOLEAN  deslocar, e ir ao estado 8
    TK_REAL     deslocar, e ir ao estado 9

    CMD      ir ao estado 95
    BLOCO    ir ao estado 96
    DECLVAR  ir ao estado 13
    ENTRADA  ir ao estado 14
    SAIDA    ir ao estado 15
    FOR      ir ao estado 16
    IF       ir ao estado 17
    ATR      ir ao estado 18


Estado 67

   60 L: C TK_AND . C

    CINT     deslocar, e ir ao estado 26
    CDOUBLE  deslocar, e ir ao estado 27
    TK_ID    deslocar, e ir ao estado 28
    CCHAR    deslocar, e ir ao estado 29
    CSTRING  deslocar, e ir ao estado 30
    '('      deslocar, e ir ao estado 31

    E  ir ao estado 97
    C  ir ao estado 98
    V  ir ao estado 36


Estado 68

   61 L: C TK_OR . C

    CINT     deslocar, e ir ao estado 26
    CDOUBLE  deslocar, e ir ao estado 27
    TK_ID    deslocar, e ir ao estado 28
    CCHAR    deslocar, e ir ao estado 29
    CSTRING  deslocar, e ir ao estado 30
    '('      deslocar, e ir ao estado 31

    E  ir ao estado 97
    C  ir ao estado 99
    V  ir ao estado 36


Estado 69

   23 VAR: TK_ID '[' . CINT ']'

    CINT  deslocar, e ir ao estado 100


Estado 70

   21 VARS: VARS ',' . VAR

    TK_ID  deslocar, e ir ao estado 37

    VAR  ir ao estado 101


Estado 71

   44 ATR: TK_ID '[' E ']' . '=' E ';'

    '='  deslocar, e ir ao estado 102


Estado 72

   43 ATR: TK_ID '=' E ';' .

    $padrão  reduzir usando a regra 43 (ATR)


Estado 73

   26 ENTRADAS: TK_SHIFTR TK_ID ';' .

    $padrão  reduzir usando a regra 26 (ENTRADAS)


Estado 74

   28 ENTRADAS: TK_SHIFTR TK_ID '[' . E ']' ';'
   29         | TK_SHIFTR TK_ID '[' . E ']' ENTRADAS

    CINT     deslocar, e ir ao estado 26
    CDOUBLE  deslocar, e ir ao estado 27
    TK_ID    deslocar, e ir ao estado 28
    CCHAR    deslocar, e ir ao estado 29
    CSTRING  deslocar, e ir ao estado 30
    '('      deslocar, e ir ao estado 31

    E  ir ao estado 103
    V  ir ao estado 36


Estado 75

   27 ENTRADAS: TK_SHIFTR TK_ID ENTRADAS .

    $padrão  reduzir usando a regra 27 (ENTRADAS)


Estado 76

   34 SAIDAS: TK_SHIFTL TK_ENDL ';' .

    $padrão  reduzir usando a regra 34 (SAIDAS)


Estado 77

   32 SAIDAS: TK_SHIFTL E TK_ENDL . ';'

    ';'  deslocar, e ir ao estado 104


Estado 78

   31 SAIDAS: TK_SHIFTL E ';' .

    $padrão  reduzir usando a regra 31 (SAIDAS)


Estado 79

   33 SAIDAS: TK_SHIFTL E SAIDAS .

    $padrão  reduzir usando a regra 33 (SAIDAS)


Estado 80

   36 FOR: TK_FOR TK_ID TK_IN '[' . E TK_2PT E ']' BLOCO ';'
   37    | TK_FOR TK_ID TK_IN '[' . E TK_2PT E ']' CMDX

    CINT     deslocar, e ir ao estado 26
    CDOUBLE  deslocar, e ir ao estado 27
    TK_ID    deslocar, e ir ao estado 28
    CCHAR    deslocar, e ir ao estado 29
    CSTRING  deslocar, e ir ao estado 30
    '('      deslocar, e ir ao estado 31

    E  ir ao estado 105
    V  ir ao estado 36


Estado 81

   45 E: E . '+' E
   46  | E . '-' E
   47  | E . '*' E
   48  | E . '/' E
   49  | E . '%' E
   62 V: TK_ID '[' E . ']'

    '+'  deslocar, e ir ao estado 61
    '-'  deslocar, e ir ao estado 62
    '*'  deslocar, e ir ao estado 63
    '/'  deslocar, e ir ao estado 64
    '%'  deslocar, e ir ao estado 65
    ']'  deslocar, e ir ao estado 106


Estado 82

   68 V: '(' E ')' .

    $padrão  reduzir usando a regra 68 (V)


Estado 83

   45 E: E . '+' E
   46  | E . '-' E
   47  | E . '*' E
   48  | E . '/' E
   49  | E . '%' E
   56 C: E TK_MAIG E .

    '+'  deslocar, e ir ao estado 61
    '-'  deslocar, e ir ao estado 62
    '*'  deslocar, e ir ao estado 63
    '/'  deslocar, e ir ao estado 64
    '%'  deslocar, e ir ao estado 65

    $padrão  reduzir usando a regra 56 (C)


Estado 84

   45 E: E . '+' E
   46  | E . '-' E
   47  | E . '*' E
   48  | E . '/' E
   49  | E . '%' E
   57 C: E TK_MEIG E .

    '+'  deslocar, e ir ao estado 61
    '-'  deslocar, e ir ao estado 62
    '*'  deslocar, e ir ao estado 63
    '/'  deslocar, e ir ao estado 64
    '%'  deslocar, e ir ao estado 65

    $padrão  reduzir usando a regra 57 (C)


Estado 85

   45 E: E . '+' E
   46  | E . '-' E
   47  | E . '*' E
   48  | E . '/' E
   49  | E . '%' E
   58 C: E TK_IG E .

    '+'  deslocar, e ir ao estado 61
    '-'  deslocar, e ir ao estado 62
    '*'  deslocar, e ir ao estado 63
    '/'  deslocar, e ir ao estado 64
    '%'  deslocar, e ir ao estado 65

    $padrão  reduzir usando a regra 58 (C)


Estado 86

   45 E: E . '+' E
   46  | E . '-' E
   47  | E . '*' E
   48  | E . '/' E
   49  | E . '%' E
   59 C: E TK_DIF E .

    '+'  deslocar, e ir ao estado 61
    '-'  deslocar, e ir ao estado 62
    '*'  deslocar, e ir ao estado 63
    '/'  deslocar, e ir ao estado 64
    '%'  deslocar, e ir ao estado 65

    $padrão  reduzir usando a regra 59 (C)


Estado 87

   45 E: E . '+' E
   46  | E . '-' E
   47  | E . '*' E
   48  | E . '/' E
   49  | E . '%' E
   54 C: E '<' E .

    '+'  deslocar, e ir ao estado 61
    '-'  deslocar, e ir ao estado 62
    '*'  deslocar, e ir ao estado 63
    '/'  deslocar, e ir ao estado 64
    '%'  deslocar, e ir ao estado 65

    $padrão  reduzir usando a regra 54 (C)


Estado 88

   45 E: E . '+' E
   46  | E . '-' E
   47  | E . '*' E
   48  | E . '/' E
   49  | E . '%' E
   55 C: E '>' E .

    '+'  deslocar, e ir ao estado 61
    '-'  deslocar, e ir ao estado 62
    '*'  deslocar, e ir ao estado 63
    '/'  deslocar, e ir ao estado 64
    '%'  deslocar, e ir ao estado 65

    $padrão  reduzir usando a regra 55 (C)


Estado 89

   45 E: E . '+' E
   45  | E '+' E .
   46  | E . '-' E
   47  | E . '*' E
   48  | E . '/' E
   49  | E . '%' E

    '*'  deslocar, e ir ao estado 63
    '/'  deslocar, e ir ao estado 64
    '%'  deslocar, e ir ao estado 65

    $padrão  reduzir usando a regra 45 (E)


Estado 90
